force-app/main/default/objects/QuoteGenesysEmailToQuote__mdt/QuoteGenesysEmailToQuote__mdt.object-meta.xml
<CustomObject>
    <label>QuoteGenesysEmailToQuote</label>
    <pluralLabel>QuoteGenesysEmailToQuote</pluralLabel>
</CustomObject>