force-app/main/default/objects/QuoteGenesysEmailToQuote__mdt/fields/FwdAddress__c.field-meta.xml
<CustomField>
    <fullName>FwdAddress__c</fullName>
    <description>It contains Email Address where we need to forward emails</description>
    <label>FwdAddress</label>
    <type>Email</type>
</CustomField>