force-app/main/default/objects/QuoteGenesysEmailToQuote__mdt/fields/IsEmailToCase__c.field-meta.xml
<CustomField>
    <fullName>IsEmailToCase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsEmailToCase</label>
    <type>Checkbox</type>
</CustomField>